@@ -21,6 +21,9 @@ Fixes:
 
     * compilation errors in Eina_RWLock code when building code on Windows > XP
 
+Improvements:
+
+    * faster implementation of Eina_Rbtree.
 
 Eina 1.1.0 (2011-12-02)
 
